# surface-nematic

./: LICENSE  README.md
COMSOL/: COMSOL-expressions.txt  assemble-COMSOL-expressions.nb  ellipsoid_beta-ramp.mph  growing-bump.mph  hydra-mesh.ply  planar-beta-ramp.mph  shrinking-bump.mph
Python (FEniCS)/: README.md  pyproject.toml  setup.cfg
Python (FEniCS)/mesh_generation/: gaussian_bump_mesh_generation.py  sph_cyl_mesh_generation.py
Python (FEniCS)/src/: Defects_2nematic.py  Defects_3D.py  fenics_2D_function_space_construct.py  fenics_function_space_construct.py  fenics_mesh.py  fenics_visualization.py  sample_script.py
Python (FEniCS)/test/: ellipsoid_wnt_fxied_area.py  ellipsoid_wnt_images_fxied_area.py  gaussian_bump.py  gaussian_bump_images.py  planar_phase_scan.py  planar_scan_power_law.py  sph_cyl_images.py  sph_cyl_images_with_side_wnt.py  sphere_wnt.py  sphere_wnt_images.py
