[metadata]
name = nematicpy
version = 0.0.1
author = Zihang Wang, M. Cristina Marchetti,and Fridtjof Brauns
author_email = mcm_group@gmail.com
description = nematic simulation via Fenics
long_description = file: README.md
long_description_content_type = text/markdown
url = N/A
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
